Client side edit/CSS/beautify

--- a/RecipeApplication/Client/wwwroot/index.html
+++ b/RecipeApplication/Client/wwwroot/index.html
@@ -7,7 +7,8 @@
     <title>RecipeApplication</title>
     <base href="/" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/search-result.css" rel="stylesheet" />
+    <link href="css/recipe.css" rel="stylesheet" />
     <link href="_content/KeywordSearchBox/styles.css" rel="stylesheet" />
 </head>
 
